fixed spacing issue on title navbar

--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ body{
 .navBar{
     background-color: slateblue;
     color:white;
-    padding: 0rem 1.5rem;
-    width: 3rem;
+    padding: 0;
+    width: 4rem;
     height:100%;
     position: fixed;
     align-items: center;
@@ -27,9 +27,13 @@ body{
 
 #navBarTitle{
     font-size: 2rem;
-    align-content: center;
-    justify-content: center;
+    transform: translate(-.5rem, 0);
 }
+
+#navBarTitleText{
+    transform: translate(-.5rem, 0);
+}
+
 .linkText{
     display:none;
     padding:.5rem 1.5rem;
@@ -43,14 +47,13 @@ body{
     padding:0;
     align-items: center;
     margin:0;
-    width:3rem;
+    width:4rem;
 }
 
 
 /*ON HOVERRRR*/
 .navBar:hover{
     width:16rem;
-    
 }
 
 .navBar:hover .linkText{
@@ -58,8 +61,8 @@ body{
 }
 .navBar:hover #navBarTitle{
     justify-content: left;
-    transform: translate(-.615rem, 0%);
 }
+
 /*ON HOVERRR*/
 
 
@@ -71,8 +74,10 @@ body{
     display:flex;
     width:1rem;
     height:1rem;
-    margin: 1rem;
+    padding: 1rem;
     align-items: center;
+    transition: 300ms;
+    margin:0rem;
 }
 
 a{
